<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.myapplication.fragments.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment_to_ideasTitleFragment"
            app:destination="@id/NotesFragment" />
    </fragment>
    <fragment
        android:id="@+id/NotesFragment"
        android:name="com.example.myapplication.fragments.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_ideasTitleFragment_to_ideasSearchFragment"
            app:destination="@id/notesSearchFragment" />
        <action
            android:id="@+id/action_NotesFragment_to_scenesAddFragment"
            app:destination="@id/noteAddShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/noteAddShowFragment"
        android:name="com.example.myapplication.fragments.NoteAddShowFragment"
        android:label="@string/note"
        tools:layout="@layout/fragment_note_add_show" />
    <fragment
        android:id="@+id/notesSearchFragment"
        android:name="com.example.myapplication.fragments.NotesSearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_notes_search" >
        <action
            android:id="@+id/action_ideasSearchFragment_to_noteAddShowFragment"
            app:destination="@id/noteAddShowFragment" />
    </fragment>
</navigation>